fix the bug with menu overlapp opened card image

--- a/calminder/src/components/Menu/Menu.module.css
+++ b/calminder/src/components/Menu/Menu.module.css
@@ -1,7 +1,7 @@
 
 .burgerWrapper {
     position: fixed;
-    top: 25vmin;
+    top: 20vmin;
     left: 1vmin;
     z-index: 9;
     display: grid;
@@ -35,7 +35,6 @@
     border-bottom-right-radius: 20px;
     font-family: 'lato';
 }
-/*          i am here now     */
 .burgerWrapper .container .burgerbtnWhite {
     box-sizing: border-box;
     display: flex;
